<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F44336">

    <!--text view aanmaken voor de titel-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zoekgerechten_title"
        android:id="@+id/zoekgerechten_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="45sp"
        android:gravity="center"
        />

    <!--button om gerecht te zoeken-->
    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/zoeken_op_ingredient"
        android:id="@+id/zoeken_op_ingredient"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/zoekgerechten_title"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:background="#FFBB33"
        android:textStyle="bold"
        android:onClick="zoekIngredient"
        />

    <!--button om gerecht te zoeken-->
    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/zoeken_op_categorie"
        android:id="@+id/zoeken_op_categorie"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/zoeken_op_ingredient"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:background="#FFBB33"
        android:textStyle="bold"
        android:onClick="zoekCategorie"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shuffle_icon"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/shuffle_icon"
        android:background="@null"
        android:scaleType="fitCenter"
        android:onClick="shuffleSearch"
        android:layout_below="@id/zoeken_op_categorie"
        />


</RelativeLayout>